--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,8 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-item routerLink="/permits" routerDirection="root">
-    <ion-icon name="options"></ion-icon>
+  <ion-item routerLink="/roles" routerDirection="root">
     <ion-label>Entra</ion-label>
   </ion-item>
 </ion-content>
