--- a/src/app/components/option/option-item-menu.html
+++ b/src/app/components/option/option-item-menu.html
@@ -1,4 +1,4 @@
-<ion-item [routerLink]="option.url" routerDirection="root">
+<ion-item [routerLink]="option.url" [class.active-item]="option.active" routerDirection="root">
   <ion-icon [name]="option.icon" slot="start"></ion-icon>
   <ion-label>{{option.title}}</ion-label>
 </ion-item>
