--- a/src/app/pages/roles/option/option.list.page.html
+++ b/src/app/pages/roles/option/option.list.page.html
@@ -11,19 +11,9 @@
 <ion-content>
   <ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
   <ion-list lines="none">
-    <ion-item-sliding *ngFor="let option of options" #iIS>
-      <ion-item>
-        <ion-label>{{option}}</ion-label>
-        <ion-icon mode="ios" name="arrow-back" slot="end"></ion-icon>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="white">
-          <ion-chip (click)="showPermits(option.id, iIS)">
-            <ion-icon name="code"></ion-icon>
-            <ion-label>{{option.profiles.length}}</ion-label>
-          </ion-chip>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+    <ion-item *ngFor="let option of options" (click)="showPermits(option.id)">
+      <ion-label>{{option}}</ion-label>
+      <ion-icon mode="ios" name="arrow-back" slot="end"></ion-icon>
+    </ion-item>
   </ion-list>
 </ion-content>
