--- a/src/app/pages/roles/option/permits/permits-option.page.html
+++ b/src/app/pages/roles/option/permits/permits-option.page.html
@@ -13,6 +13,11 @@
 <ion-content>
   <ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
   <ion-list lines="none">
+    <ion-list-header>
+      <ion-label>Permisos
+        <ion-badge color="white">{{option.profiles.length}}</ion-badge>
+      </ion-label>
+    </ion-list-header>
     <ion-item *ngFor="let profile of profiles">
       <ion-label>{{profile}}</ion-label>
       <ion-toggle checked="{{profile.options.length>0}}" disabled="{{profile.id==1}}" mode="ios"
