--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,6 +7,7 @@
   <ion-item routerLink="/roles" routerDirection="root">
     <ion-label>Entra</ion-label>
   </ion-item>
+  <ion-button (click)=crea()>Crear</ion-button>
   <ion-button (click)=opt()>Options</ion-button>
   <ion-button (click)=pro()>Profiles</ion-button>
 
