--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ion-item routerLink="/roles" routerDirection="root">
+  <ion-item routerLink="/profiles" routerDirection="root">
     <ion-label>Entra</ion-label>
   </ion-item>
   <ion-button (click)=crea()>Crear</ion-button>
