--- a/src/app/pages/profiles/profile/admin/admin-profile.page.html
+++ b/src/app/pages/profiles/profile/admin/admin-profile.page.html
@@ -19,7 +19,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-slides [options]="{ threshold: 30 }">
+  <ion-slides pager="true" [options]="{ threshold: 30 }">
     <ion-slide>
       <ion-list lines="none" style="width: 100%;">
         <ion-list-header>
