--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <ion-label>Bienvenido Funer Cien</ion-label>
           </ion-list-header>
           <ion-menu-toggle auto-hide="false" *ngFor="let option of options">
-            <app-option-item-menu [option]="option"></app-option-item-menu>
+            <app-item-menu [option]="option"></app-item-menu>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
