--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,6 +8,7 @@
     <ion-label>Entra</ion-label>
   </ion-item>
   <ion-button (click)=crea()>Crear</ion-button>
+  <ion-button (click)=syn()>Sincronizar</ion-button>
+  <ion-button (click)=de()>Eliminar</ion-button>
   <ion-button (click)=opt()>Options</ion-button>
-  <ion-button (click)=pro()>Profiles</ion-button>
 </ion-content>
