--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,11 +4,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ion-item routerLink="/profiles" routerDirection="root">
-    <ion-label>Entra</ion-label>
-  </ion-item>
-  <ion-button (click)=crea()>Crear</ion-button>
-  <ion-button (click)=syn()>Sincronizar</ion-button>
-  <ion-button (click)=de()>Eliminar</ion-button>
-  <ion-button (click)=opt()>Options</ion-button>
+  {{jj}}
+  <ion-button expand="full" fill="outline" color="white" (click)="walkInto()">Entrar</ion-button>
 </ion-content>
