--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -15,7 +15,7 @@
 </ion-header>
 <ion-content>
   <ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
-  <ion-list>
+  <ion-list lines="none">
     <ion-item (click)="adminProfile(profile)" *ngFor="let profile of profiles">
       <ion-label>{{profile}}</ion-label>
     </ion-item>
