--- a/src/app/pages/profile/admin/admin-profile.page.html
+++ b/src/app/pages/profile/admin/admin-profile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button disabled="{{profile.id===1}}">
+      <ion-button disabled="{{profile.id===1}}" (click)="saveProfile()">
         <ion-icon name="checkmark"></ion-icon>
       </ion-button>
     </ion-buttons>
