--- a/src/app/components/menu/permits/permits.page.html
+++ b/src/app/components/menu/permits/permits.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs no-border>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="profile">
       <ion-icon name="code"></ion-icon>
