--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,18 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content padding>
-  <ion-button expand="full" fill="outline" color="white" (click)="walkInto()">Entrar</ion-button>
+<ion-content>
+  <ion-list lines="none">
+    <ion-list-header>
+      <ion-title> Knowing tMt </ion-title>
+    </ion-list-header>
+    <ion-item>
+      <ion-label position="floating">Usuario:</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Clave:</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-button color="dark" expand="full" (click)="walkInto()">
+    <ion-icon name="pulse" size="large"></ion-icon>
+  </ion-button>
 </ion-content>
