--- a/src/app/pages/profile/admin/admin-profile.page.html
+++ b/src/app/pages/profile/admin/admin-profile.page.html
@@ -1,34 +1,34 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button disabled="{{profile.id===1}}" (click)="saveProfile()">
-        <ion-icon name="checkmark"></ion-icon>
+      <ion-button (click)="close()">
+        <ion-icon name="arrow-back" mode="ios"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title *ngIf="profile.id === null"> Crear perfil </ion-title>
     <ion-title *ngIf="profile.id !== null"> Actualizar perfil </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="close()">
-        <ion-icon name="close"></ion-icon>
+      <ion-button (click)="saveProfile()">
+        <ion-icon name="checkmark"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-slides pager="true" [options]="{ threshold: 30 }">
-    <ion-slide>
-      <ion-list lines="none" style="width: 100%;">
-        <ion-list-header>
-          <ion-label>Datos basicos</ion-label>
-        </ion-list-header>
-        <form [formGroup]="form">
-          <ion-item>
-            <ion-label position="floating">Nombre:</ion-label>
-            <ion-input formControlName="name"></ion-input>
-          </ion-item>
-        </form>
-      </ion-list>
-    </ion-slide>
+  <!-- <ion-slides pager="true" [options]="{ threshold: 30 }">
+    <ion-slide>-->
+  <ion-list lines="none" style="width: 100%;">
+    <ion-list-header>
+      <ion-label>Datos basicos</ion-label>
+    </ion-list-header>
+    <form [formGroup]="form">
+      <ion-item>
+        <ion-label position="floating">Nombre:</ion-label>
+        <ion-input formControlName="name"></ion-input>
+      </ion-item>
+    </form>
+  </ion-list>
+  <!-- </ion-slide>
     <ion-slide>
       <ion-list lines="none" style="width: 100%;">
         <ion-list-header> Permisos: 0 </ion-list-header>
@@ -42,5 +42,10 @@
         </ion-list>
       </ion-list>
     </ion-slide>
-  </ion-slides>
+  </ion-slides>-->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="profile.id !== null">
+    <ion-fab-button color="danger" size="small" (click)="delete(profile)">
+      <ion-icon name="trash"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
