--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -1,20 +1,22 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Perfiles
-    </ion-title>
+    <ion-title>Perfiles</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="adminProfile()">
         <ion-icon name="add"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
 </ion-header>
 <ion-content>
-  <ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
+  <ion-refresher slot="fixed" (ionRefresh)="getAll($event)">
+    <ion-refresher-content pullingIcon="refresh" refreshingSpinner="dots">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list lines="none">
     <ion-item (click)="adminProfile(profile)" *ngFor="let profile of profiles">
       <ion-label>{{profile}}</ion-label>
