--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,21 +5,24 @@
         <ion-toolbar>
           <ion-title>Menu</ion-title>
           <ion-buttons slot="end">
+            <ion-button (click)="syncUp()">
+              <ion-icon color="dark" mode="ios" name="git-compare"></ion-icon>
+            </ion-button>
             <ion-button (click)="signOff()">
-              <ion-icon name="undo" mode="ios"></ion-icon>
+              <ion-icon color="danger" mode="ios" name="log-out"></ion-icon>
             </ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <!--<ion-list>
+        <ion-list>
           <ion-list-header>
             <ion-label>Bienvenido Funer Cien</ion-label>
           </ion-list-header>
           <ion-menu-toggle auto-hide="false" *ngFor="let option of options">
             <app-item-menu [option]="option"></app-item-menu>
           </ion-menu-toggle>
-        </ion-list>-->
+        </ion-list>
       </ion-content>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
