--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,7 +12,7 @@
       <ion-input type="password"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button color="dark" expand="full" (click)="walkInto()">
-    <ion-icon name="pulse" size="large"></ion-icon>
+  <ion-button color="dark" expand="full" fill="outline" (click)="walkInto()">
+    Entrar
   </ion-button>
 </ion-content>
