--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -6,7 +6,7 @@
     <ion-title>Perfiles</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="adminProfile()">
-        <ion-icon name="add"></ion-icon>
+        <ion-icon color="primary" name="add"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -14,7 +14,7 @@
 </ion-header>
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="getAll($event)">
-    <ion-refresher-content pullingIcon="refresh" refreshingSpinner="dots">
+    <ion-refresher-content pullingIcon="null" refreshingSpinner="dots">
     </ion-refresher-content>
   </ion-refresher>
   <ion-list lines="none">
