--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,7 +12,5 @@
       <ion-input type="password"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button color="dark" expand="full" fill="outline" (click)="walkInto()">
-    Entrar
-  </ion-button>
+  <ion-button color="dark" expand="full" fill="outline" (click)="walkInto()"> Entrar </ion-button>
 </ion-content>
