--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -14,7 +14,7 @@
 </ion-header>
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="getAll($event)">
-    <ion-refresher-content pullingIcon="null" refreshingSpinner="dots">
+    <ion-refresher-content refreshingSpinner="dots">
     </ion-refresher-content>
   </ion-refresher>
   <ion-list lines="none">
