--- a/src/app/pages/profile/admin/admin-profile.page.html
+++ b/src/app/pages/profile/admin/admin-profile.page.html
@@ -15,34 +15,47 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <!-- <ion-slides pager="true" [options]="{ threshold: 30 }">
-    <ion-slide>-->
-  <ion-list lines="none" style="width: 100%;">
-    <ion-list-header>
-      <ion-label>Datos basicos</ion-label>
-    </ion-list-header>
-    <form [formGroup]="form">
-      <ion-item>
-        <ion-label position="floating">Nombre:</ion-label>
-        <ion-input formControlName="name"></ion-input>
-      </ion-item>
-    </form>
-  </ion-list>
-  <!-- </ion-slide>
+  <ion-slides pager="true" [options]="{ threshold: 30 }">
     <ion-slide>
       <ion-list lines="none" style="width: 100%;">
-        <ion-list-header> Permisos: 0 </ion-list-header>
-        <ion-searchbar mode="ios" (keyup)="searchOptions(iS)" (ionClear)="cleanOptions()" #iS></ion-searchbar>
+        <ion-list-header>
+          <ion-label>Datos basicos</ion-label>
+        </ion-list-header>
+        <form [formGroup]="form">
+          <ion-item>
+            <ion-label position="floating">Nombre:</ion-label>
+            <ion-input formControlName="name"></ion-input>
+          </ion-item>
+        </form>
+      </ion-list>
+    </ion-slide>
+    <ion-slide>
+      <ion-list lines="none" style="width: 100%;">
+        <ion-list-header> Coordina a: 0 </ion-list-header>
+        <ion-searchbar mode="ios"></ion-searchbar>
         <ion-list lines="none">
-          <ion-item *ngFor="let option of options">
-            <ion-label>{{option}}</ion-label>
+          <ion-item>
+            <ion-label>Coordinaciones...</ion-label>
             <ion-toggle>
             </ion-toggle>
           </ion-item>
         </ion-list>
       </ion-list>
     </ion-slide>
-  </ion-slides>-->
+    <ion-slide>
+      <ion-list lines="none" style="width: 100%;">
+        <ion-list-header> Coordina a: 0 </ion-list-header>
+        <ion-searchbar mode="ios"></ion-searchbar>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label>Coordinaciones...</ion-label>
+            <ion-toggle>
+            </ion-toggle>
+          </ion-item>
+        </ion-list>
+      </ion-list>
+    </ion-slide>
+  </ion-slides>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="profile.lid !== null">
     <ion-fab-button color="danger" size="small" (click)="delete(profile)">
       <ion-icon name="trash"></ion-icon>
