--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -5,6 +5,9 @@
     </ion-buttons>
     <ion-title>Perfiles</ion-title>
     <ion-buttons slot="end">
+      <ion-button (click)="info()">
+        <ion-icon color="dark" name="information-circle-outline"></ion-icon>
+      </ion-button>
       <ion-button (click)="adminProfile()">
         <ion-icon color="primary" name="add"></ion-icon>
       </ion-button>
