--- a/src/app/pages/profile/components/choose-profile.page.html
+++ b/src/app/pages/profile/components/choose-profile.page.html
@@ -8,7 +8,7 @@
     <ion-title> Perfiles </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
+<ion-searchbar animated mode="ios"></ion-searchbar>
 <ion-content>
   <ion-list lines="none" style="width: 100%;">
     <ion-list lines="none">
