--- a/src/app/pages/profile/profile.list.page.html
+++ b/src/app/pages/profile/profile.list.page.html
@@ -31,3 +31,8 @@
     </ion-list-header>
   </ion-list>
 </ion-content>
+<ion-fab vertical="bottom" horizontal="end">
+  <ion-fab-button color="light">
+    <ion-icon name="microphone"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
