--- a/src/app/pages/profile/components/choose-profile.page.html
+++ b/src/app/pages/profile/components/choose-profile.page.html
@@ -8,13 +8,18 @@
     <ion-title> Perfiles </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-searchbar animated mode="ios"></ion-searchbar>
+<ion-searchbar animated mode="ios" (keyup)="search(iS)" (ionClear)="cleanSearchbar()" #iS></ion-searchbar>
 <ion-content>
-  <ion-list lines="none" style="width: 100%;">
-    <ion-list lines="none">
-      <ion-item *ngFor="let profile of profiles">
-        <ion-label>{{profile}}</ion-label>
-      </ion-item>
-    </ion-list>
+  <ion-list lines="none" *ngIf="profiles.length>0">
+    <ion-item [ngStyle]="{'opacity': profile.status!=1?0.5:1}" (click)="choose(profile)"
+      *ngFor="let profile of profiles">
+      <ion-icon name="{{profile.icon}}" slot="start"></ion-icon>
+      <ion-label>{{profile.profile}}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-list *ngIf="profiles.length==0">
+    <ion-list-header>
+      <ion-label>No se encontraron perfiles</ion-label>
+    </ion-list-header>
   </ion-list>
 </ion-content>
